--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -158,7 +158,7 @@ config SND_SOC_APQ8074
 	select SND_SOC_MSM_STUB
 	select SND_SOC_MSM_HOSTLESS_PCM
 	select SND_SOC_WCD9320
-	select SND_SOC_MSM_HDMI_CODEC_RX
+	select SND_SOC_MSM_HDMI_CODEC_RX 
 	select SND_DYNAMIC_MINORS
 	select AUDIO_OCMEM
 	select DTS_SRS_TM
@@ -307,7 +307,7 @@ config SND_SOC_MSM8994
 	select MSM_QDSP6_APRV2
 	select MSM_QDSP6V2_CODECS
 	select SND_SOC_WCD9330
-	select SND_SOC_MSM_HDMI_CODEC_RX
+	select SND_SOC_MSM_HDMI_CODEC_RX if FB_MSM_MDSS_HDMI_PANEL
 	select QTI_PP
 	select DTS_SRS_TM
 	select SND_SOC_CPE
