--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -83,7 +83,6 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 # CONFIG_TASKSTATS is not set
-CONFIG_TASK_CPUFREQ_STATS=y
 
 #
 # RCU Subsystem
@@ -107,6 +106,7 @@ CONFIG_CGROUPS=y
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
+CONFIG_TASK_CPUFREQ_STATS=y
 CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
@@ -422,6 +422,9 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
+# CONFIG_PM_ADVANCED_DEBUG is not set
+# CONFIG_PM_TEST_SUSPEND is not set
+CONFIG_PM_SLEEP_DEBUG=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_CPU_PM=y
@@ -1724,6 +1727,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_MFD_HSU is not set
 CONFIG_SERIAL_CORE=y
+CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
 CONFIG_SERIAL_MSM_HSL=y
@@ -2767,7 +2771,6 @@ CONFIG_SND_SOC_WCD9330=y
 CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD_CPE=y
 CONFIG_SND_SOC_MSM_STUB=y
-# CONFIG_SND_SOC_MSM_HDMI_CODEC_RX is not set
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
