oneplus2_defconfig: enable CONFIG_QUOTA see https://github.com/aosp-mirror/kernel_msm/commit/ebb5537a1fd65c0d9960b26e1581e30539aefab8\#diff-48fd9979dd83cbe029b960983aff90e7 and https://source.android.com/devices/storage/faster-stats\#implementation needs device tree update
Change-Id: I16b07e05a060b3d31aed271f015354a24e8d5f16
Signed-off-by: anupritaisno1 <www.anuprita804@gmail.com>

--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -4112,3 +4112,8 @@ CONFIG_LIBFDT=y
 CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
+
+CONFIG_QUOTA=y
+CONFIG_QUOTACTL=y
+CONFIG_QFMT_V2=y
+# CONFIG_PRINT_QUOTA_WARNING is not set
