--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -3505,6 +3505,7 @@ CONFIG_MSM_IRQ=y
 # Android
 #
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
