--- a/arch/arm64/configs/oneplus2_defconfig
+++ b/arch/arm64/configs/oneplus2_defconfig
@@ -458,7 +458,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
-CONFIG_CPU_INPUT_BOOST=y
+# CONFIG_CPU_INPUT_BOOST is not set
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
